# FCGI_poll

./: .gitignore  CMakeLists.txt  README.md  fcgi.pri  fcgi.pro  main.cpp
include/: fcgi_config.h  fcgios.h
lib/: libfcgi.so.0
libfcgi/: fcgiapp.c  fcgio.cpp  os_unix.c  os_unix.cpp
perl/: FCGI.c
test/: CMakeLists.txt  README.md  common.hpp  nginx_cmdline.hpp  nginx_test.cpp  standalone_cmdline.hpp  standalone_test.cpp  test.cpp
